Fixed #30 Add horizontal scrolling for console

--- a/citrus-admin-client/src/main/resources/static/app/css/main.css
+++ b/citrus-admin-client/src/main/resources/static/app/css/main.css
@@ -109,7 +109,7 @@ pre {
 pre.logger {
     height: 700px;
     overflow-y: auto;
-    overflow-x: hidden;
+    overflow-x: auto;
     font-size: 12px;
 }
 
